--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "data-fns": "^0.1.8", 
+    "data-fns": "^0.1.8",
     "eslint": "^7.32.0",
     "firebase": "^9.6.1",
     "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.1",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "start": "^5.1.0",
     "web-vitals": "^1.1.2"
