--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.3.1",
     "data-fns": "^0.1.8",
     "eslint": "^7.32.0",
     "firebase": "^9.6.1",
     "npm": "^8.3.0",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.1",
@@ -41,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "prop-types": "^15.7.2"
   }
 }
