--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "react-instagram",
-  "homepage": "https://thealphamerc.github.io/react-instagram/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -11,6 +13,7 @@
     "data-fns": "^0.1.8",
     "eslint": "^7.32.0",
     "firebase": "^9.6.1",
+    "prop-types": "^15.7.2",
     "npm": "^8.3.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
@@ -48,8 +51,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.37",
     "autoprefixer": "^10.4.0",
-    "gh-pages": "^3.2.3",
-    "prop-types": "^15.7.2"
+    "gh-pages": "^3.2.3"
   }
 }
