--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "data-fns": "^0.1.8",
     "eslint": "^7.32.0",
     "firebase": "^9.6.1",
-    "prop-types": "^15.7.2",
     "npm": "^8.3.0",
     "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.1",
@@ -30,7 +30,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "lint": "eslint src/**/*.js src/**/*.jsx"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +54,8 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "autoprefixer": "^10.4.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3"
   }
 }
