--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "autoprefixer": "^10.4.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "sass": "^1.45.1"
   }
 }
